# DR-estimator-OPE-large-action

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MDR_OPE_large_action_space.ipynb  README.md  compose.yaml  conf.py  main_n_actions.ipynb  ope.py  pyproject.toml
.github/workflows/: docker.yml  lint.yml
docker/: cpu_only_sync.sh
src/: plots.py
src/synthetic/: __init__.py  conf.py  conf_MIPS.py  experiment_runner.py  main_beta.ipynb  main_epsilon.ipynb  main_n_actions.ipynb  main_n_cat_dim.ipynb  main_n_cat_per_dim.ipynb  main_n_deficient_actions.ipynb  main_n_rounds.ipynb  main_reward_std.ipynb  ope.py  plots.py  policy.py  regression_model.py  regression_model_mdr.py  reward_function_registry.py  run_experiment.py  synthetic_bandit_with_action_embeds.py
src/synthetic/hydra_conf/: config.yaml
src/synthetic/hydra_conf/dataset/: default.yaml
src/synthetic/hydra_conf/experiment/: beta.yaml  epsilon.yaml  n_actions.yaml  n_cat_dim.yaml  n_cat_per_dim.yaml  n_deficient_actions.yaml  n_rounds.yaml  reward_std.yaml
src/synthetic/hydra_conf/scale/: bestest.yaml  faster.yaml  fastest.yaml  slowest.yaml
tests/: test_reward_registry.py  test_run_ope.py  test_synthetic_dataset.py
